--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 
 
 /* CSS debug mode */
- /* * {background-color:rgba(255,0,128,0.05);} */
+ /* * {background-color:rgba(255,0,128,0.05);}  */
 
 
 body { overflow:auto !important;padding-right:0 !important;  }
@@ -198,12 +198,12 @@ a.download:hover { text-decoration:underline; }
 .resource .data > div > .sub > h4:not(.first),
 /* .resource .data > div > .sub > .subsub > h4:not(.first),  */
 /* :not(:nth-child(2):last-child), */
-.propCollapse h4,
-.propCollapseHeader h4 { width:100%; padding-left:30px; }
+.propCollapse > div > div > h4,
+.propCollapseHeader > h4 { width:100%; padding-left:30px; }
 .resource .data > div > h4::after,
 .resource .data > div > .sub > h4:not(.first)::after,
-.propCollapse h4::after,
-.propCollapseHeader h4::after { display:none !important; }
+.propCollapse > div > div > h4::after,
+.propCollapseHeader > h4::after { display:none !important; }
 /*h3 .expand { display:inline-block; cursor:pointer;}
 h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .propCollapse.in-false h4:first-child { margin-top:0;transition:all 200ms ease-in-out; }
