fixed checking multiple facets including unspecified

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -35,7 +35,7 @@ a.result { padding:0;margin-bottom:10px;width:100%;display: inline-block;margin-
 a.result button { text-transform:none; padding-bottom:0;}
 /* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
 a.result + div:not(#pagine) { margin-top:-15px!important;padding:2px 0 0px 35px ; margin-left:41px; font-size:0.8rem; margin-bottom:5px; border-left: 1px solid rgba(0,0,0,0.25) ; }
-a.result + div:not(#pagine):empty { margin-bottom:8px; margin-top:0 !important;padding-top:0 !important;}
+a.result + div:not(#pagine):empty { margin-bottom:8px; margin-top:-20px !important;padding-top:0 !important;}
 
    /* box-shadow:-5px 0 5px -4px rgba(0,0,0,0.2);  } */
 a.result + div span { display:inline ; line-height:1.2rem; }
