css fixes for small size iframes (#92 - WIP)

--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -60,3 +60,23 @@
 #gotoPage.error { color:red ; }
 
 .scroll-view [data-image-id="https://iiif.archivelab.org/iiif/rashodgson13$0/canvas"] { display:none !important; }
+
+
+@media (max-width:768px) {
+    .mirador-container .mirador-main-menu.user-buttons li:nth-last-child(-n+5):not(:last-child) { display:none; }
+
+    .mirador-container .repo-image { position:absolute;right:0; display:none;}
+
+    .mirador-container .preview-thumb { position:relative; margin-bottom:5px;}
+    
+    .mirador-container .select-metadata,
+    .mirador-container .item-info,
+    .mirador-container .manifest-title h3,
+    #viewer .member-select-results li   { height:auto;position:relative;bottom:0 }
+
+    .mirador-container .select-metadata { left:5px;}
+
+    .mirador-container .manifest-title h3 { line-height:1.5em; }
+
+    #viewer .member-select-results li { display: flex;flex-wrap: wrap; flex-direction: column-reverse; }
+}
