--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -61,6 +61,7 @@
 
 .scroll-view [data-image-id="https://iiif.archivelab.org/iiif/rashodgson13$0/canvas"] { display:none !important; }
 
+.mirador-container .mirador-viewer ul.scroll-listing-thumbs li img[data=''] { display:none; }
 
 @media (max-width:768px) {
     /* .mirador-container .mirador-main-menu.user-buttons li:nth-last-child(-n+5):not(:last-child) { display:none; } */
@@ -84,4 +85,4 @@
 
     .window-manifest-navigation { min-width:200px; }
     .window-manifest-navigation .mirador-btn.mirador-osd-fullscreen { display:none; }
-}
+}       
