--- a/src/components/App.css
+++ b/src/components/App.css
@@ -136,7 +136,7 @@ h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
 .resource h3 span { /*text-decoration: underline;*/ font-weight:600;  text-transform:capitalize; }
 .resource h3 { font-size:14px;margin-top:6px; }
 .resource .sub { width:100%; padding-left:20px;display:flex;flex-wrap:wrap; box-sizing: border-box; position:relative;}
-.resource .sub h4.first { font-size:0.9em;font-style:italic; text-transform:capitalize; flex-shrink:0; }
+.resource .sub h4.first { font-size:0.85em;font-style:italic; text-transform:capitalize; flex-shrink:0; line-height:1.6em;}
  .resource .sub .sub h4.first.type,
 .resource .sub h4.first.prop { font-style:normal;font-size:0.8em; line-height:20px }
 .resource .subsub { width:100%; padding-left:20px; display: flex;align-items: baseline;flex-wrap:nowrap;position:relative; box-sizing: border-box;}
@@ -242,6 +242,11 @@ a.login { text-decoration:underline; cursor:pointer; }
 
 a.download { text-decoration:none; font-weight:bold; cursor:pointer; }
 a.download:hover { text-decoration:underline; }
+
+h3 + h4.multiple,
+h3 + .propCollapseHeader,
+h3 + .sub 
+{ margin-top:2px; }
 
 /*.resource .data > div > h4,*/ /* « object type: manuscript » */
 .resource .data > div > h4.multiple,
@@ -408,6 +413,7 @@ body > .ol-li-lang:last-child li::before,
 .subcollapse.custom-lang:not(.sorting) .ol-li-lang:hover svg.drag { opacity:1; cursor: row-resize; }
 .subcollapse.custom-lang.sorting, .subcollapse.custom-lang.sorting * { cursor:row-resize; }
 .ol-li-lang { z-index:100 !important;height:22px;color:rgba(0,0,0,0.87);position:relative;}
+.ol-li-lang a { position:relative; }
 ol .ol-li-lang:last-child li:before { display:none; }
 .ol-li-lang:last-child .add { position: absolute; margin-left: -19px; margin-top: -1px; opacity:1; }
 /* custom language reordering */
