--- a/src/components/App.css
+++ b/src/components/App.css
@@ -38,19 +38,25 @@ li + a.result { margin-top:-5px; }
 a.result { padding:0;margin-bottom:10px;width:auto;display: inline-block;margin-top:3px;}
 a.result button { text-transform:none; padding-bottom:0;}
 /* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
-a.result ~ #matches { margin-top:-15px!important;padding:2px 0 0px 35px ; margin-left:41px; font-size:0.8rem; margin-bottom:5px; border-left: 1px solid rgba(0,0,0,0.25) ; }
-a.result ~ #matches:empty { margin-bottom:8px; margin-top:-20px !important;padding-top:0 !important;}
+.result-box ~ #matches, a.result ~ #matches { margin-top:-15px!important;padding:2px 0 0px 35px ; margin-left:41px; font-size:0.8rem; margin-bottom:5px; border-left: 1px solid rgba(0,0,0,0.25) ; }
+.result-box ~ #matches:empty, a.result ~ #matches:empty { margin-bottom:8px; margin-top:-20px !important;padding-top:0 !important;}
 
 
 /* box-shadow:-5px 0 5px -4px rgba(0,0,0,0.2);  } */
+#matches {  }
 #matches span { display:inline ; line-height:1.2rem; }
 #matches span.label { text-transform:capitalize; font-weight:700; float:left;clear:both; flex-shrink:0; }
 /* #matches span:not(.label) {  } */
 .match { display:flex; margin-bottom:0px }
 .match a { /*word-break:  break-word;*/ overflow-wrap: break-word; }
 
-.result-content { position:relative;  }
-.source { position:absolute; top:0; margin-top:9px; margin-left:0px; display:inline-block; }
+
+
+.result-content { position:relative; } 
+
+.result-box { display:flex; }
+
+.source { /*position:absolute;*/ top:0; margin-top:9px; margin-left:0px; display:inline-block; flex-shrink:0;}
 .source a img { height:32px; margin:0 5px; padding-top:2px; }
 /* .source a:last-child img { height:35px; vertical-align:top;  } */
 
